@@ -28,9 +28,8 @@
         <httpClient.version>4.5.1</httpClient.version>
         <commons-collections4.version>4.1</commons-collections4.version>
         <spotbugs.plugin.version>3.0.4</spotbugs.plugin.version>
-        <surefire.plugin.version>3.0.0-M4</surefire.plugin.version>
+        <surefire.plugin.version>2.22.1</surefire.plugin.version>
         <sbt-compiler.plugin.version>1.0.0</sbt-compiler.plugin.version>
-        <argLine>-XX:MaxPermSize=512m</argLine>
     </properties>
     <build>
         <plugins>
